<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" />

    <string name="action_continue">Continue</string>

    <string name="bool_true">YES</string>
    <string name="bool_false">NO</string>

    <string name="main">Main</string>
    <string name="agent">Agent</string>
    <string name="customer">Customer</string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="choose_server">Choose server</string>
    <string name="server_address">Server address</string>
    <string name="demo_mode">Demo mode</string>
    <string name="save">Save</string>
    <string name="logout_dialog_title">Do you want to logout?</string>
    <string name="server_settings">Server settings</string>
    <string name="menu_action_logout">Logout</string>

    <string name="receiver">RECEIVER:</string>
    <string name="sender">SENDER:</string>
    <string name="sub_agent">SUB-AGENT:</string>
    <string name="sub_agent_not_involved">NOT INVOLVED</string>
    <string name="code">CODE:</string>
    <string name="from_">FROM:</string>
    <string name="to_">TO:</string>
    <string name="card_">Card:</string>
    <string name="card_holder_name_">Card holder:</string>
    <string name="account_type">Account Type:</string>
    <string name="account_number">Account Number:</string>
    <string name="account_currency">Account Currency:</string>
    <string name="supplier">SUPPLIER:</string>
    <string name="customer_">CUSTOMER:</string>
    <string name="date_">Date:</string>
    <string name="balance_">Balance:</string>
    <string name="account_">Account:</string>
    <string name="operation_amount_">Operation amount:</string>
    <string name="commission_amount_">Commission amount:</string>
    <string name="fee_amount_">Fee amount:</string>
    <string name="exchange_rate">Exchange rate:</string>
    <string name="total_amount_">Total amount:</string>
    <string name="beg_balance_">Beginning balance:</string>
    <string name="end_balance_">Ending balance:</string>
    <string name="agent_info_">Agent info:</string>
    <string name="transaction_id_">Transaction ID:</string>
    <string name="call_center_phone_">CallCenter phone:</string>
    <string name="thank_you_">Thank you!</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="denied">Denied</string>
    <string name="agent_receipt_title">AGENT RECEIPT</string>
    <string name="customer_receipt_title">CUSTOMER RECEIPT</string>
    <string name="please_wait">Please wait …</string>>

    <string name="card_number">Card number</string>
    <string name="card_holder">Card holder</string>
    <string name="pin_block">Pin block</string>
    <string name="exp_date">Expiration date</string>

    <string name="selecting_device">Selecting device</string>
    <string name="no_connected_device">No connected devices. Press \"Connect\" button to connect any.</string>

    <!--Accounts-->

    <string name="add">Add</string>
    <string name="add_account_title">Adding account</string>
    <string name="attention">Attention!</string>
    <string name="op_confirm_pass_hint">Enter password for account</string>
    <string name="op_confirm_pass">Enter password</string>
    <string name="op_confirm_otp_title">Confirm the operation</string>
    <string name="op_confirm_otp_send_button">Get a confirmation code</string>
    <string name="op_confirm_otp_sended">Confirmation SMS has been sent.</string>
    <string name="op_confirm_otp_hint">Enter confirmation code</string>
    <string name="op_confirm_scratch_title">Enter scratch code No. %1$s from card No. %2$s</string>
    <string name="op_confirm_scratch_hint">Enter scratch code</string>
    <string name="op_confirm_resend_code">Send code again</string>
    <string name="op_confirm_change_type">Change confirmation type</string>
    <string name="op_confirm_change_type_dialog_title">Choose confirmation type</string>
    <string name="op_confirm_type_otp">One time password</string>
    <string name="op_confirm_type_password">Password</string>
    <string name="op_confirm_type_scratchcode">Scratch code</string>

    <string name="account_status_perm_block">Blocked</string>
    <string name="account_status_temp_block">Blocked</string>
    <string name="account_status_valid">Active</string>
    <string name="status_unknown">Unknown</string>

    <string name="rename_account">Enter new account name</string>
    <string name="rename_card">Enter new card name</string>

    <!--Rates widget-->
    <string name="last_update">Last update: %s</string>
    <string name="buy">Buy</string>
    <string name="base">Base</string>
    <string name="sell">Sell</string>
    <string name="response_error">Не удалось загрузить данные с сервера</string>

    <string name="checking">Current</string>
    <string name="deposit">Deposit</string>
    <string name="credit">Credit</string>
    <string name="unknown">Unknown</string>

    <string name="currency_rub">rub.</string>
    <string name="currency_usd">\u0024</string>
    <string name="currency_eur">\u20AC</string>

    <string name="customerPass_promt">Enter cardholder password</string>
    <string name="select_">Select</string>
    <string name="list_empty">List is empty</string>
    <string name="status_">Status:</string>
    <string name="filter">Filter</string>
    <string name="choose">Select</string>
    <string name="date">Date</string>
    <string name="operation">Operation</string>
    <string name="fee">Fee</string>
    <string name="start_date">Since</string>
    <string name="end_date">to</string>
    <string name="no_operations">Operations not found</string>

    <string name="message_loading">Loading...</string>

    <string name="check_icon">&#xf00c;</string>
    <string name="camera_button_title">Take photo</string>

    <string name="permission_location">To access this function allow Agency Banking application to access your location.</string>
    <string name="location_access_message_enable">To continue, let your device turn on location using Google\'s location service.</string>

    <string name="error_image_upload">Something went wrong when uploading images. Please try again</string>

    <string name="error_req_param">Field can not be empty</string>

    <!--Receipts-->
    <string name="customer_receipt">CUSTOMER RECEIPT</string>
    <string name="agent_receipt">AGENT RECEIPT</string>
    <string name="title_activity_geo">GEOActivity</string>
    <string name="new_account">New account</string>
    <string name="new_card">New card</string>
    <string name="new_customer">New customer</string>

    <!--Photo capturing-->
    <string name="picture_saved">Picture saved:</string>
    <string name="camera_hint">Be sure that image is captured clearly</string>
    <string name="camera_permissions_title">Camera access</string>
    <string name="camera_permissions_message">To have ability to make photos, allow access to camera and external storage.</string>

    <!--Image preview-->
    <string name="done_button_title">Done</string>

    <!--Contacts permissions-->
    <string name="request_read_contacts_permission_rationale_title">Phone number from your Contacts</string>
    <string name="request_read_contacts_permission_rationale_message">To select a phone number from your contacts list, allow to read Contacts.</string>
    <string name="error_unable_get_contacts">Unable to read a phone number from your Contacts.</string>

</resources>