<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmation_group_otp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/op_conf_step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible">

        <TextView
            android:id="@+id/confirmation_code_otp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:text="@string/op_confirm_otp_title" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/view_conformation_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="invisible"
                tools:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirmation_code_otp_wrap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.bpc.modulesdk.ui.views.CustomEditText
                        android:id="@+id/confirmation_code_otp"
                        style="@style/param_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/op_confirm_otp_hint"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        tools:text="012345" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/text_get_code_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_clickable_white"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/op_confirm_resend_code"
                    android:textColor="@drawable/text_clickable_blue"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_get_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_clickable_white"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/op_confirm_otp_send_button"
                android:textColor="@drawable/text_clickable_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>
