<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/server_choise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/server_address" />

                <EditText
                    android:id="@+id/server_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/servers_list"
                    android:layout_width="28dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="V" />

            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/simulator_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/server_choise"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|start"
                android:text="@string/demo_mode" />

            <Switch
                android:id="@+id/demo_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end" />

        </FrameLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/simulator_mode"
            android:layout_centerHorizontal="true"
            android:text="@string/save" />

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/save_button"
            android:layout_centerHorizontal="true"
            tools:text="1.1.0" />
    </RelativeLayout>
</FrameLayout>